@@ -3,6 +3,11 @@
 	* gnus-art.el (gnus-article-browse-html-parts): Use <div align="left">
 	instead of <pre> to align message header.
 
+2012-12-12  Sam Steingold  <sds@gnu.org>
+
+	* gnus.el (gnus-other-frame-resume-function): Add user option.
+	(gnus-other-frame): Call `gnus-other-frame-resume-function' on resume.
+
 2012-12-06  Sam Steingold  <sds@gnu.org>
 
 	* gnus-start.el (gnus-before-resume-hook): Add.
